    rtorrent methods and event handlers
  * rtcontrol: Added "field=/regex/" pattern filter
  * rtcontrol: Added Tempita output templates, they have to start with 
    '{{' to be recognized, use '{{#}}' if you don't start with a field; 
    this allows "if" and "for" loops, for more on the syntax, see
    http://pythonpaste.org/tempita/
  * rtcontrol: Output formats can now be file: URLs that get resolved
    automatically; paths can be absolute, relative to the configuration
    directory or start with "~" for paths in the user's home. Note that
    the file content is stripped at the end (i.e. trailing spaces and
    newlines are removed).
  * chtor: "-s field" now deletes the field (assignment without any value)
  * chtor: "-no-ssl" forces announce URLs to be 'http'
  * mktor: the chtor "--set" option now also works with mktor
  * lstor: Added virtual "__size__" field
  * Bugfix: Conditions nested 2 or more levels didn't work

 -- pyroscope <pyroscope.project@gmail.com>  Sat, 02 Apr 2011 16:43:35 +0200

pyroscope (0.3.10) hardy; urgency=low

  * New "hashcheck" tool to check data against existing torrent file
  * rtcontrol: New option "--tee-view" to ADDITIONALLY show search
    results in ncurses view (modifies -V and --to-view behaviour)
  * rtcontrol: New options "--purge" and "--cull" for data deletion
  * rtcontrol: Prefix "--sort-fields" names with a '-' to get
    descending order for that field only
  * lstor: new option --skip-validation to show the contents of
    broken metafiles (validation errors just result in warnings)

 -- pyroscope <pyroscope.project@gmail.com>  Wed, 02 Mar 2011 01:11:58 +0100

pyroscope (0.3.9) hardy; urgency=low

  * Some internal fixes, mostly better error reporting

 -- pyroscope <pyroscope.project@gmail.com>  Sun, 12 Sep 2010 14:04:09 +0200

pyroscope (0.3.8) hardy; urgency=low

  * rtxmlrpc: Added --xml option
  * chtor: Added --set and --clean-xseed options
  * pyroadmin: Added --output option
  * Some API changes
